--- a/dypj.html
+++ b/dypj.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="ErgoProxy">
 	<meta name="description" content="ErgoProxy">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	
 	<!-- include main css -->
 	<link rel="stylesheet" type="text/css" href="css/slick.css"/>	
@@ -73,7 +73,7 @@
 			
 	<!--banner  start-->
 	<section class="banner_zi">
-	     <div><img src="suibiao.jpg" alt=""></div>	  
+	     <div><img src="images/suibiao.jpg" alt=""></div>	  
 	</section>
 	<!--banner end-->
 	<div class="head_bar">
@@ -89,7 +89,7 @@
 			<li class="clearfix">
 				<div class="news_left clearfix">
 					<div class="pic">
-						<a href="pj1.html"><img src="touxiang1.jpg" alt="" /></a>
+						<a href="pj1.html"><img src="images/touxiang1.jpg" alt="" /></a>
 						<i></i>
 					</div>
 					<div class="txt">
@@ -107,7 +107,7 @@
 			<li class="clearfix">
 				<div class="news_left clearfix">
 					<div class="pic">
-						<a href="pj2"><img src="touxiang2.jpg" alt="" /></a>
+						<a href="pj2"><img src="images/touxiang2.jpg" alt="" /></a>
 						<i></i>
 					</div>
 					<div class="txt">
@@ -125,7 +125,7 @@
 			<li class="clearfix">
 				<div class="news_left clearfix">
 					<div class="pic">
-						<a href="pj3.html"><img src="touxiang3.jpg" alt="" /></a>
+						<a href="pj3.html"><img src="images/touxiang3.jpg" alt="" /></a>
 						<i></i>
 					</div>
 					<div class="txt">
@@ -143,7 +143,7 @@
 			<li class="clearfix">
 				<div class="news_left clearfix">
 					<div class="pic">
-						<a href="pj4.html"><img src="touxiang4.jpg" alt="" /></a>
+						<a href="pj4.html"><img src="images/touxiang4.jpg" alt="" /></a>
 						<i></i>
 					</div>
 					<div class="txt">
@@ -161,7 +161,7 @@
 			<li class="clearfix">
 				<div class="news_left clearfix">
 					<div class="pic">
-						<a href="pj5.html"><img src="touxiang5.jpg" alt="" /></a>
+						<a href="pj5.html"><img src="images/touxiang5.jpg" alt="" /></a>
 						<i></i>
 					</div>
 					<div class="txt">
@@ -208,7 +208,7 @@
              				<div class="lian">
       						<span> 
       							<a href="http://www.71360.com/" target="_blank">
-      								<img src="yu.png" alt="" />
+      								<img src="images/yu.png" alt="" />
       							</a>
       							
       						</span> 	
